# ORA_labs

./: CMakeLists.txt  README.md  lab1_report.ipynb
.github/workflows/: cmake.yml  python_test.yml
.ipynb_checkpoints/: lab1_report-checkpoint.ipynb
lab1/: CMakeLists.txt
lab1/include/str_match/: BoyerMooreHorspool.hpp  KnuthMorrisPratt.hpp  all.hpp  naive.hpp  rabin_karp.hpp
lab1/profile/: CMakeLists.txt  profiler.hpp  run.cpp
lab1/profile/results/: BMH.csv  KMP.csv  benchmarking.csv  benchmarking.txt  naive.csv  rabin_karp.csv
lab1/src/: BoyerMooreHorspool.cpp  CMakeLists.txt  KnuthMorrisPratt.cpp  naive.cpp  rabin_karp.cpp
lab1/tests/: CMakeLists.txt  debug.hpp  stress.cpp  templates.hpp  unit.cpp
lab2/: profile.py  results.csv  stress_tests.py  unit_test.py3  unit_tests.py
lab2/benchmarks/04/: profits.txt  weights.txt
lab2/knapsack/: 2approx.py  approx.py  branch_and_bound.py  dynprog.py  fptas.py  problem.py
lab2/knapsack/profile/: profile.py
lab2/knapsack/profile/benchmarks/02/: weights.txt
lab3/: benchmark_knapsack.py  benchmark_tsp.py  result_tsp.csv
lab3/benchmarks/knapsack/: result.csv
lab3/benchmarks/knapsack/01/: profits.txt
lab3/benchmarks/knapsack/02/: profits.txt
lab3/benchmarks/tsp/: result.csv
lab3/benchmarks/tsp/data/: ch150.csv  fl417.csv
lab3/knapsack/: knapsack.py
lab3/tsp/: genetic_tsp.py
lab4/: result.csv  run.py
lab4/benchmarks/solutions/iterated_local_search/: tai100a.sol  tai20a.sol  tai40a.sol  tai60a.sol  tai80a.sol
lab4/benchmarks/solutions/local_search/: tai100a.sol  tai20a.sol  tai40a.sol  tai60a.sol  tai80a.sol
lab4/qap/: iterated_local_search.py  local_search.py  problem.py
lab5/: plot.py  run.py
lab5/bees/: algorithm.py  neihborhood_operators.py  problem.py
lab5/benchmarks/solutions/A/: A-n32-k5.sol  A-n33-k5.sol  A-n33-k6.sol  A-n34-k5.sol  A-n36-k5.sol  A-n37-k5.sol  A-n37-k6.sol  A-n38-k5.sol  A-n39-k5.sol  A-n39-k6.sol  A-n44-k6.sol  A-n45-k6.sol  A-n45-k7.sol  A-n46-k7.sol  A-n48-k7.sol  A-n53-k7.sol  A-n54-k7.sol  A-n55-k9.sol  A-n60-k9.sol  A-n61-k9.sol  A-n62-k8.sol  A-n63-k10.sol  A-n63-k9.sol  A-n64-k9.sol  A-n65-k9.sol  A-n69-k9.sol  A-n80-k10.sol
lab5/benchmarks/solutions/B/: B-n31-k5.sol  B-n34-k5.sol  B-n35-k5.sol  B-n38-k6.sol  B-n39-k5.sol  B-n41-k6.sol  B-n43-k6.sol  B-n44-k7.sol  B-n45-k5.sol  B-n45-k6.sol  B-n50-k7.sol  B-n50-k8.sol  B-n51-k7.sol  B-n52-k7.sol  B-n56-k7.sol  B-n57-k7.sol  B-n57-k9.sol  B-n63-k10.sol  B-n64-k9.sol  B-n66-k9.sol  B-n67-k10.sol  B-n68-k9.sol  B-n78-k10.sol
string_matching/: CMakeLists.txt  str_match.hpp  test_templates.hpp  tests.cpp
